--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </video>
     <div class="overlay"></div>
     <div class="head-text" style="text-align:center;margin-top:30px;">
-        <img width="170px" src="https://liquipedia.net/commons/images/3/3b/Battlegrounds_Mobile_India_Series_2024_allmode.png" alt="">
+        <img style="padding-bottom: 8px;" width="270px" src="b-logo.png" alt="">
         <h1 style="color:#eaeaea;font-weight:bold;">Raise of Champions</h1>
         <p style="color: #d4d4d4;;font-size:18px;">Rise of Champions. It's more than a game. It's legancy. Explore the stories behind the legends of BGMI esports, here.</p>
     </div>
@@ -384,25 +384,25 @@
     <div class="row gx-0 g-3">
         <div class="col-6 col-lg-3  d-flex">
             <div class="card h-100 w-100" style="width:30%;background:black; border-radius:10px;border:1px solid white;box-shadow:0px 6px 15px rgba(0, 0, 0, 0.7);">
-                <img height="300px" class="card-img-top" src="https://liquipedia.net/commons/images/5/54/Godlike_Punkk_2024.jpg" alt="">
+                <img height="300px" class="card-img-top" src="punk.jpg" alt="">
                 <h5 style="color:white; text-align:center;font-size:16px;" class="card-title mt-2 fw-semi-bold">Godlpunk <span style="font-weight:100;">(Igl)</span></h5>
             </div>
         </div>
         <div class="col-6 col-lg-3  d-flex">
             <div class="card h-100 w-100" style="width:30%;background:black;border-radius:10px;border:1px solid white;box-shadow:0px 6px 15px rgba(0, 0, 0, 0.7);">
-                <img height="300px" class="card-img-top" src="https://liquipedia.net/commons/images/9/9f/Godlike_ADMINO_2024.jpg" alt="">
+                <img height="300px" class="card-img-top" src="admino.jpg" alt="">
                 <h5 style="color:white; text-align:center;font-size:16px;" class="card-title mt-2  fw-semi-bold">Godladmino <span style="font-weight:100;">(Assaulter)</span></h5>
             </div>
         </div>
         <div class="col-6 col-lg-3  d-flex">
             <div class="card h-100 w-100" style="width:30%;background:black;border-radius:10px;border:1px solid white;box-shadow:0px 6px 15px rgba(0, 0, 0, 0.7);">
-                <img height="300px" class="card-img-top" src="https://liquipedia.net/commons/images/e/e4/Godlike_ZGOD_2024.jpg" alt="">
+                <img height="300px" class="card-img-top" src="z-god.jpg" alt="">
                 <h5 style="color:white; text-align:center;font-size:16px;" class="card-title mt-2  fw-semi-bold">GodlzGod <span style="font-weight:100;">(Supporter)</span></h5>
         </div>
         </div>
         <div class="col-6 col-lg-3  d-flex">
             <div class="card h-100 w-100" style="width:30%;background:black;border-radius:10px;border:1px solid white;box-shadow:0px 6px 15px rgba(0, 0, 0, 0.7);">
-                <img height="300px" class="card-img-top" src="https://liquipedia.net/commons/images/4/44/Godlike_Jonathan_2024.JPG" alt="">
+                <img height="300px" class="card-img-top" src="jonny.jpg" alt="">
                 <h5 style="color:white; text-align:center;font-size:16px;" class="card-title mt-2  fw-semi-bold">Godljonathan  <span style="font-weight:100;">(Assaulter)</span></h5>
         </div>
         </div>
