--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             </div>
         </div>
     </nav>
+    </div>
 
 
     <div class="background-head mt-3" >
@@ -235,6 +236,7 @@
     </div>
     </div>
 
+<div class="container">
 <div class="head-container">
 <div class="bgmi-img">
     <img style="max-width:300px;width:100%;" src="bgmi.png" alt="">
@@ -260,6 +262,7 @@
     <img class="om-img" style="max-width:250px;width:100%;" src="om-2-img.png" alt="">
     </div>
     </div>
+</div>
 </div>
     
     <div class="container">
@@ -314,7 +317,7 @@
  </div>
  <div class="container">
     <div class="jonny-card">
- <div>
+ <div style="margin-left: 40px;">
       <h2 style="color:#ecc371;font-size:24px;margin-bottom:0;">चल मार! चल नहीं होरा क्या?</h2>
       <h2 style="color:#eaeaea;font-weight:bold;margin-bottom:0;margin-top:24px;">Godljonathan- The Clutch Master <br> of BGMI</h2>
       <p style="color: #d4d4d4;margin-top:24px;margin-bottom:24px;">Jonathan clutches from 2019-2024</p>
@@ -327,7 +330,7 @@
 </div>
 
 <div class="container"> 
-<div class="jon-text-2 d-flex justify-content-center align-items-center mt-4 gap-4">
+<div style="margin-block:40px;" class="jon-text-2 d-flex justify-content-center align-items-center  gap-4">
 <img style="margin-block:px;border-radius:10px;"class="img-fluid" width="500px" height="270px" src="https://media.assettype.com/afkgaming%2F2022-12%2F1f42e7d4-fe78-4ab4-9692-e83b33151a24%2FCover_Image___JONATHAN_Comes_Second_For_Esports_Mobile_Player_Of_The_Year_At_Esports_Awards_2022.jpg?auto=format%2Ccompress&dpr=1.0&w=1200" alt="">
 <div>
 <div class="jony-img">
@@ -340,7 +343,7 @@
 </div>
 </div>
 <div>
-<div class="jon-text d-flex justify-content-center align-items-center mt-4 gap-4">
+<div class="jon-text d-flex justify-content-center align-items-center  gap-4">
     <div>
     <div class="jony-img">
     <h4 style="color:#eaeaea;font-weight:bold;margin-bottom:24px;">Breaking Records, Winning Hearts</h4>
@@ -354,7 +357,7 @@
         <img class="img-fluid" style="border-radius:10px;" width="500px" height="270px" src="https://prod.assets.earlygamecdn.com/images/BGMI-Jonathan-Sensitivity-Settings.png?transform=banner_webp" alt="">
 </div>
 </div>
-<div class="jon-text-2 d-flex justify-content-between align-items-center mt-4 gap-4">
+<div style="margin-block: 40px;" class="jon-text-2 d-flex justify-content-between align-items-center gap-4">
     <img class="img-fluid" style="border-radius:10px;" width="500px" height="270px" src="https://i.ytimg.com/vi/2YIGiMdFo9s/maxresdefault.jpg" alt="">
 <div>
     <div class="jony-img">
@@ -371,8 +374,8 @@
 <div class="container">
 <div style="text-align:center;margin-top:48px;">
     <img width="100px" src="godlike-logo.png" alt="">
-    <h2 style="color: #eaeaea;text-align:center;font-size:28px;margin-block:32px;font-weight:bold;">GodLike Esports: Dominating the Indian eSports Scene</h2>
-    <p style="color:#d4d4d4;">GodLike Esports has become a household name in the Indian eSports scene, known for its exceptional gameplay and dominance in titles like BGMI. Founded
+    <h2 style="color: #eaeaea;text-align:center;font-size:28px;font-weight:bold;margin-top: 24px;">GodLike Esports: Dominating the Indian eSports Scene</h2>
+    <p style="color:#d4d4d4;margin-top:24px;">GodLike Esports has become a household name in the Indian eSports scene, known for its exceptional gameplay and dominance in titles like BGMI. Founded
          with the vision of creating a powerhouse, the team quickly rose to fame with top-tier players like Jonathan, ClutchGod, and Neyoo. Over the years,
           GodLike has consistently outperformed in national tournaments, earning a reputation for strategic gameplay, teamwork, and raw talent. Their success
            not only secured championships but also played a crucial role in elevating Indian eSports on the global map. Today, GodLike stands as a symbol of 
@@ -381,7 +384,7 @@
 </div>
 
 <div class="container">
-    <div class="row gx-0 g-3">
+    <div style="margin-top: 32px;" class="row gx-0 g-3">
         <div class="col-6 col-lg-3  d-flex">
             <div class="card h-100 w-100" style="width:30%;background:black; border-radius:10px;border:1px solid white;box-shadow:0px 6px 15px rgba(0, 0, 0, 0.7);">
                 <img height="300px" class="card-img-top" src="punk.jpg" alt="">
@@ -411,25 +414,25 @@
         
 
 <div class="container">
-    <h2 style="color: #eaeaea; text-align:center;margin-top:48px;font-weight:bold;margin-bottom:32px;">Iconic Matches & Legendary Moments</h2>
+    <h2 style="color: #eaeaea; text-align:center;margin-top:48px;font-weight:bold;margin-bottom:0px;margin-top:48px;">Iconic Matches & Legendary Moments</h2>
 </div>
 
-<div class="container">
-    <div class="row g-3">
-<div class="col-12 col-md-6 mt-4">
-    <iframe  style="max-width:550px;width:100%;height:312px;border-radius:10px;" src="https://www.youtube.com/embed/rOGZLPAYOlM?si=vG3S3hlQzkR1g3YC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<div class="container ">
+    <div style="margin-top: 32px;" class="row  align-items-center ">
+<div class="col-12 col-lg-6 ">
+    <iframe  style="width:100%;height:312px;border-radius:10px;" src="https://www.youtube.com/embed/rOGZLPAYOlM?si=vG3S3hlQzkR1g3YC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h5 style="color:#eaeaea;font-weight:bold;margin-top:8px;">Shadow's Masterclass: Epic 1v4 Clutch Against Soul</h5>
 </div>
-<div class="col-12 col-md-6 mt-4">
-    <iframe style="max-width:550px;width:100%;height:312px;border-radius:10px;" src="https://www.youtube.com/embed/I0PPPnqSrUg?si=Kv6DDswmi6VeT61Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<div  class="col-12 col-lg-6 ">
+    <iframe style="width:100%;height:312px;border-radius:10px;" src="https://www.youtube.com/embed/I0PPPnqSrUg?si=Kv6DDswmi6VeT61Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h5 style="color:#eaeaea;font-weight:bold;margin-top:8px;">GodlLike vs Soul:Showdown BGMI ESL LAN 2025 Day 2</h5>
 </div>
-<div class="col-112 col-md-6  mt-4">
-    <iframe style="max-width:550px;width:100%;height:312px;border-radius:10px;"  src="https://www.youtube.com/embed/sonnlWyY9hM?si=c9KXPPVrQcaSjw64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<div class="col-112 col-lg-6  mt-4">
+    <iframe style="width:100%;height:312px;border-radius:10px;"  src="https://www.youtube.com/embed/sonnlWyY9hM?si=c9KXPPVrQcaSjw64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h5 style="color:#eaeaea;font-weight:bold;margin-top:8px;">GODLIKE GOES SUPER SAIYAN MODE IN BGIS ROUNDS</h5>
 </div>
-<div class="col-12 col-md-6 mt-4">
-    <iframe style="max-width:550px;width:100%;height:312px;border-radius:10px;" src="https://www.youtube.com/embed/U9h-38A8A1Y?si=JCYfFfjkvBksIQzr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<div class="col-12 col-lg-6 mt-4">
+    <iframe style="width:100%;height:312px;border-radius:10px;" src="https://www.youtube.com/embed/U9h-38A8A1Y?si=JCYfFfjkvBksIQzr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h5 style="color:#eaeaea;font-weight:bold;margin-top:8px;">Clips That Made Jonathan Famous😱🔥</h5>
 </div>
 </div>
